manifests/ingress/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd  # Argo CD가 설치된 네임스페이스로 설정
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # HTTP -> HTTPS 리디렉션
    cert-manager.io/cluster-issuer: "hanjun-site-clusterissuer"  # 인증서 발급을 위한 ClusterIssuer
spec:
  ingressClassName: hanjun-ingress  # 사용할 Ingress 클래스
  rules:
    - host: argocd.hanjun.site  # Argo CD 접속용 도메인
      http:
        paths:
          - path: /  # 루트 경로
            pathType: Prefix
            backend:
              service:
                name: argocd-server  # Argo CD 서버 서비스 이름
                port:
                  number: 443  # Argo CD 서버의 HTTPS 포트
  tls:
    - hosts:
        - argocd.hanjun.site  # TLS 적용할 도메인
      secretName: hanjun-site-tls  # TLS 인증서가 저장될 Secret 이름
